--- a/content/projects/tabtiv/index.mdx
+++ b/content/projects/tabtiv/index.mdx
@@ -2,6 +2,9 @@
 title: Tabtiv App
 date: "2022-01-04"
 description: "Designing a billing app for fitness trainers to request and keep track of client payments."
+featuredImage:
+  src: "./cover.jpg"
+  alt: "App mockups"
 meta:
   website:
   contribution: ["UX Design", "UX Research"]
