--- a/content/projects/tabtiv/index.mdx
+++ b/content/projects/tabtiv/index.mdx
@@ -3,7 +3,7 @@ title: Tabtiv App
 date: "2022-01-04"
 description: "Designing a billing app for fitness trainers to request and keep track of client payments."
 featuredImage:
-  src: "./cover.jpg"
+  src: "./tabtiv_cover.jpg"
   alt: "App mockups"
 meta:
   website:
@@ -25,11 +25,11 @@ embeddedImagesLocal:
 
 import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
-<GatsbyImage alt="dummy" image={getImage(props.localImages[0])} />
+<GatsbyImage alt="" image={getImage(props.localImages[0])} />
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Overview</Label>
+    <Label transparent>Overview</Label>
   </Col>
   <Col>
     <p>
@@ -42,7 +42,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Role</Label>
+    <Label transparent>Role</Label>
   </Col>
   <Col>
     <p>
@@ -55,7 +55,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>User Research</Label>
+    <Label transparent>User Research</Label>
   </Col>
   <Col>
     <p>
@@ -95,7 +95,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Persona</Label>
+    <Label transparent>Persona</Label>
   </Col>
   <Col>
     <h2>Meet Michelle</h2>
@@ -122,7 +122,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>User Journey</Label>
+    <Label transparent>User Journey</Label>
   </Col>
   <Col>
     <h3>Michelle's User Journey</h3>
@@ -133,13 +133,13 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[1])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[1])} />
   </Col>
 </Grid>
 
 <Grid lg="2" gap="2rem">
   <Col align="flex-end">
-    <Label>Wirefames</Label>
+    <Label transparent>Wirefames</Label>
   </Col>
   <Col>
     <h2>Paper</h2>
@@ -152,7 +152,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[2])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[2])} />
   </Col>
 </Grid>
 
@@ -166,10 +166,10 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[3])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[3])} />
   </Col>
   <Col align="flex-end">
-    <Label>Digital</Label>
+    <Label transparent>Digital</Label>
   </Col>
   <Col>
     <p>
@@ -180,7 +180,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[4])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[4])} />
   </Col>
   <Col></Col>
   <Col>
@@ -201,7 +201,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Usability Studies</Label>
+    <Label transparent>Usability Studies</Label>
   </Col>
   <Col>
     <p>
@@ -220,7 +220,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Refinements</Label>
+    <Label transparent>Refinements</Label>
   </Col>
   <Col>
     <h2>Addressing Insights</h2>
@@ -230,7 +230,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[5])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[5])} />
   </Col>
   <Col></Col>
   <Col>
@@ -240,13 +240,13 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[6])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[6])} />
   </Col>
 </Grid>
 
 <Grid lg="2" gap="2rem">
   <Col align="flex-end">
-    <Label>Addressing Insights</Label>
+    <Label transparent>Addressing Insights</Label>
   </Col>
   <Col>
     <h2>Visual Design</h2>
@@ -274,13 +274,13 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </Button>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[7])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[7])} />
   </Col>
 </Grid>
 
 <Grid lg="2" gap="2rem">
   <Col align="flex-end">
-    <Label>Mockups</Label>
+    <Label transparent>Mockups</Label>
   </Col>
   <Col>
     <h2>Final Design</h2>
@@ -290,7 +290,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="dummy" image={getImage(props.localImages[8])} />
+    <GatsbyImage alt="" image={getImage(props.localImages[8])} />
   </Col>
   <Col></Col>
   <Col>
@@ -311,7 +311,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Accessibility</Label>
+    <Label transparent>Accessibility</Label>
   </Col>
   <Col>
     <p>
@@ -324,7 +324,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Final Thoughts</Label>
+    <Label transparent>Final Thoughts</Label>
   </Col>
   <Col>
     <h2>Final Thoughts</h2>
@@ -344,7 +344,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Next Steps</Label>
+    <Label transparent>Next Steps</Label>
   </Col>
   <Col>
     <List gap="8px">
@@ -360,7 +360,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2">
   <Col align="flex-end">
-    <Label>Connect</Label>
+    <Label transparent>Connect</Label>
   </Col>
   <Col>
     <p>Thank you for reviewing my case study on Tabtiv.</p>
