--- a/content/projects/artitude/index.mdx
+++ b/content/projects/artitude/index.mdx
@@ -16,11 +16,11 @@ embeddedImagesLocal:
 
 import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
-<GatsbyImage alt="dummy" image={getImage(props.localImages[0])} />
+<GatsbyImage alt="" image={getImage(props.localImages[0])} />
 
 <Grid lg="2" md="1">
   <Col align="flex-end">
-    <Label>Coming Soon</Label>
+    <Label transparent>Coming Soon</Label>
   </Col>
   <Col>
     <p>
