--- a/content/projects/tabtiv/index.mdx
+++ b/content/projects/tabtiv/index.mdx
@@ -1,7 +1,10 @@
 ---
 title: Tabtiv App
-date: "2022-01-04"
-description: "Designing a billing app for fitness trainers to request and keep track of client payments."
+subtitle: Designing a mobile experience for an billing app
+status: "Published"
+date:
+  modified: ""
+  published: "2022-01-04"
 featuredImage:
   src: "./tabtiv_cover.jpg"
   alt: "App mockups"
@@ -21,11 +24,13 @@ embeddedImagesLocal:
   - tabtiv_mockup-2.png
   - tabtiv_visual-design.jpg
   - tabtiv_final-design.jpg
+
+description: "Designing a billing app for fitness trainers to request and keep track of client payments."
 ---
 
 import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
-<GatsbyImage alt="" image={getImage(props.localImages[0])} />
+<Figure alt="Preview of mockups" image={getImage(props.localImages[0])} />
 
 <Grid lg="2">
   <Col align="flex-end">
@@ -133,7 +138,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[1])} />
+    <Figure alt="User joourney map" image={getImage(props.localImages[1])} />
   </Col>
 </Grid>
 
@@ -152,7 +157,10 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[2])} />
+    <Figure
+      alt="Paper wireframes for Home / Dashboard screen"
+      image={getImage(props.localImages[2])}
+    />
   </Col>
 </Grid>
 
@@ -166,7 +174,10 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[3])} />
+    <Figure
+      alt="Demonstrating navigation on digital wireframe"
+      image={getImage(props.localImages[3])}
+    />
   </Col>
   <Col align="flex-end">
     <Label transparent>Digital</Label>
@@ -180,7 +191,10 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[4])} />
+    <Figure
+      alt="Create invoice functions"
+      image={getImage(props.localImages[4])}
+    />
   </Col>
   <Col></Col>
   <Col>
@@ -230,7 +244,10 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[5])} />
+    <Figure
+      alt="Redesigning invoice summary"
+      image={getImage(props.localImages[5])}
+    />
   </Col>
   <Col></Col>
   <Col>
@@ -240,7 +257,10 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[6])} />
+    <Figure
+      alt="Adding quick action buttons"
+      image={getImage(props.localImages[6])}
+    />
   </Col>
 </Grid>
 
@@ -258,7 +278,6 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
         target="_blank"
         rel="noopener"
         underlined
-        external
       >
         <span>Human Interface Guidelines</span>
       </AnimatedAnchor>
@@ -274,7 +293,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </Button>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[7])} />
+    <Figure alt="Visual styles" image={getImage(props.localImages[7])} />
   </Col>
 </Grid>
 
@@ -290,7 +309,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <GatsbyImage alt="" image={getImage(props.localImages[8])} />
+    <Figure alt="Final design" image={getImage(props.localImages[8])} />
   </Col>
   <Col></Col>
   <Col>
