--- a/content/projects/tabtiv/index.mdx
+++ b/content/projects/tabtiv/index.mdx
@@ -138,7 +138,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
   </Col>
   <Col span="2">
-    <Figure alt="User joourney map" image={getImage(props.localImages[1])} />
+    <Figure alt="User journey map" image={getImage(props.localImages[1])} />
   </Col>
 </Grid>
 
@@ -374,14 +374,5 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
       </li>
       <li>Design for native Android app.</li>
     </List>
-  </Col>
-</Grid>
-
-<Grid lg="2">
-  <Col align="flex-end">
-    <Label transparent>Connect</Label>
-  </Col>
-  <Col>
-    <p>Thank you for reviewing my case study on Tabtiv.</p>
   </Col>
 </Grid>
