--- a/content/projects/foggyou/index.mdx
+++ b/content/projects/foggyou/index.mdx
@@ -34,7 +34,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 <Figure alt="Website on browser" image={getImage(props.localImages[0])} />
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Overview</Label>
   </Col>
   <Col>
@@ -48,7 +48,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Role</Label>
   </Col>
   <Col>
@@ -59,15 +59,19 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
     <h3>Collaboration</h3>
     <p>
-      I work closely with TE PERSPECTIVE, who is leading the project in the
-      aspect of branding, along with the content team of professionals in
-      various disciplines including copywriting, photography, and videography.
+      I work closely with{" "}
+      <AnimatedAnchor href="//teperspective.com" target="_blank" rel="noopener">
+        TE PERSPECTIVE
+      </AnimatedAnchor>
+      , who is leading the project in the aspect of branding, along with the content
+      team of professionals in various disciplines including copywriting, photography,
+      and videography.
     </p>
   </Col>
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Discovery</Label>
   </Col>
   <Col>
@@ -96,7 +100,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Strategy</Label>
   </Col>
   <Col>
@@ -131,7 +135,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col m="8px 0" align="flex-end">
+  <Col m="8px 0">
     <Label transparent>Define</Label>
   </Col>
   <Col>
@@ -154,7 +158,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end"></Col>
+  <Col></Col>
   <Col>
     <h2>Information Architecture</h2>
     <p>
@@ -169,7 +173,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 <Figure alt="Information architecture" image={getImage(props.localImages[3])} />
 
 <Grid lg="2">
-  <Col m="8px 0" align="flex-end">
+  <Col m="8px 0">
     <Label transparent>Workflow</Label>
   </Col>
   <Col>
@@ -180,7 +184,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     </p>
     <h3>I define the theme.</h3>
     <p>
-      In a theme, style properties such as colors and typography are defined
+      In a theme, style properties such as colours and typography are defined
       globally as variables, which its value can then be referenced.
     </p>
     <p>
@@ -221,7 +225,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 />
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Other Responsibilities</Label>
   </Col>
   <Col>
@@ -238,7 +242,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Final Thoughts</Label>
   </Col>
   <Col>
