--- a/content/projects/tabtiv/index.mdx
+++ b/content/projects/tabtiv/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tabtiv App
-subtitle: Designing a mobile experience for an billing app
+subtitle: Designing a mobile experience for a billing app
 status: "Published"
 date:
   modified: ""
@@ -33,20 +33,20 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 <Figure alt="Preview of mockups" image={getImage(props.localImages[0])} />
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Overview</Label>
   </Col>
   <Col>
     <p>
       Tabtiv is a client billing app for fitness trainers to create and send
-      invoices to clients. It is set to address the difficulities busy fitness
-      trainers faced to keep up with their clients' payment schedule.
+      invoices to clients. It is set to address the difficulties busy fitness
+      trainers faced to keep up with their clients' payment schedules.
     </p>
   </Col>
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Role</Label>
   </Col>
   <Col>
@@ -59,7 +59,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>User Research</Label>
   </Col>
   <Col>
@@ -72,7 +72,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
       Common problems that they often faced when billing clients the manual way
       such as personalized client's package which makes preparing invoices even
       time-consuming, keeping up with their payments, and collecting payments,
-      sometimes in-person, and processing multiple kindd of payments, both
+      sometimes in-person, and processing multiple kinds of payments, both
       physically and electronically.
     </p>
   </Col>
@@ -90,8 +90,8 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
         payments in person.
       </li>
       <li>
-        Process: Each client has their preferred payment methods which makes
-        processing and tracking these payments even tedious.
+        Process: Each client has their preferred payment methods which make
+        processing and tracking these payments even more tedious.
       </li>
     </List>
     <p>From user research, I created the persona and a problem statement.</p>
@@ -99,13 +99,13 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Persona</Label>
   </Col>
   <Col>
     <h2>Meet Michelle</h2>
     <p>
-      Michelle is a 24F, living in the capital city of Malaysia, KL. She works
+      Michelle is a (24F) living in the capital city of Malaysia, KL. She works
       part-time as a personal trainer for over 3 years.
     </p>
     <p>
@@ -126,7 +126,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>User Journey</Label>
   </Col>
   <Col>
@@ -143,8 +143,8 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2" gap="2rem">
-  <Col align="flex-end">
-    <Label transparent>Wirefames</Label>
+  <Col>
+    <Label transparent>Wireframes</Label>
   </Col>
   <Col>
     <h2>Paper</h2>
@@ -152,7 +152,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
       For the first screen of the app, I ensured to address one of the user pain
       points immediately: time. I prioritized the user flow of sending an
       invoice with quick entry points, such as a Create action button and pinned
-      clients to quick-send invoices, while providing access to useful
+      clients to quick-send invoices while providing access to useful
       information and analytics.
     </p>
   </Col>
@@ -179,7 +179,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
       image={getImage(props.localImages[3])}
     />
   </Col>
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Digital</Label>
   </Col>
   <Col>
@@ -214,7 +214,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Usability Studies</Label>
   </Col>
   <Col>
@@ -233,7 +233,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Refinements</Label>
   </Col>
   <Col>
@@ -265,7 +265,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2" gap="2rem">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Addressing Insights</Label>
   </Col>
   <Col>
@@ -281,8 +281,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
       >
         <span>Human Interface Guidelines</span>
       </AnimatedAnchor>
-      . It has especially transformed Tabtiv's visual hierarchy and touch points
-      tremendously.
+      . It has especially transformed Tabtiv's visual hierarchy and touchpoints tremendously.
     </p>
     <Button
       href="https://www.figma.com/file/ikxDVoxZQ3Wk4P1CKDiHPz/Tabtiv-App?node-id=110%3A1443"
@@ -298,7 +297,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2" gap="2rem">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Mockups</Label>
   </Col>
   <Col>
@@ -329,20 +328,20 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Accessibility</Label>
   </Col>
   <Col>
     <p>
       I interacted with prototypes on an actual device using the Figma app to
-      test for real-world usability. With the test I managed to improve and
+      test for real-world usability. With the test, I managed to improve and
       optimise the touch targets on the final prototype.
     </p>
   </Col>
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Final Thoughts</Label>
   </Col>
   <Col>
@@ -362,14 +361,14 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 </Grid>
 
 <Grid lg="2">
-  <Col align="flex-end">
+  <Col>
     <Label transparent>Next Steps</Label>
   </Col>
   <Col>
     <List gap="8px">
       <li>Collect feedback to determine any new areas of need.</li>
       <li>
-        Design micro-interactions to make the overall experience even
+        Design micro-interactions to make the overall experience even more
         delightful.
       </li>
       <li>Design for native Android app.</li>
