--- a/content/projects/virtue/index.mdx
+++ b/content/projects/virtue/index.mdx
@@ -290,7 +290,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
     <List>
       <li>To visualise the electronic verification process,</li>
       <li>To improve the product browsing experience,</li>
-      <li>To design an interactive form experience.e</li>
+      <li>To design an interactive form experience.</li>
     </List>
   </Col>
 </Grid>
@@ -558,7 +558,7 @@ import { getImage, GatsbyImage } from "gatsby-plugin-image"
 
 <Grid lg="2" rtl>
   <Col>
-    <h2>Hight-Fidelity Prototype</h2>
+    <h2>High-Fidelity Prototype</h2>
     <Button
       href="https://www.figma.com/proto/Z8JyXCrz9BW8LBByX4WSjO/Virtue?node-id=76%3A2921&viewport=241%2C48%2C0.15&scaling=scale-down&starting-point-node-id=368%3A6697&show-proto-sidebar=1"
       target="_blank"
